src/main/java/com/example/warsztat_samochodowy/error/CarNotFoundException.java
package com.example.warsztat_samochodowy.error;

public class CarNotFoundException extends RuntimeException {
    public CarNotFoundException(String message) {
        super(message);
    }
}
